kubernetes/apps/ai/agentgateway/gateway/groq.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: groq
spec:
  parentRefs:
    - name: agentgateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /groq
      backendRefs:
        - name: groq
          group: agentgateway.dev
          kind: AgentgatewayBackend
